--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I currently work for Chubb Insurance and want to learn how to become a software developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Stanhope, New Jersey</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy road biking and flying drones</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Software developer or Drone pilot for marketing companies</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>New Jersey</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I enjoy coding and working in a team setting. Being able to work remotely definitely has its perks!</p>
     </section>
 
     <footer id="footer">
